# example-cmake

./: README.md
prj1/: CMakeLists.txt  main.cpp
prj2/: CMakeLists.txt
prj3/: CMakeLists.txt
prj3/include/: good_morning.hpp  hello.hpp
prj3/src/: CMakeLists.txt  good_morning.cpp
prj3/test/: CMakeLists.txt  main.cpp
prj4/: CMakeLists.txt  main.cpp
prj5/: CMakeLists.txt
prj6/: CMakeLists.txt  main.cpp
prj7/: CMakeLists.txt  Makefile  header1.h  header2.h  main.c
